--- a/site/src/components/ReleaseCountdown.module.css
+++ b/site/src/components/ReleaseCountdown.module.css
@@ -1,6 +1,6 @@
 .timerContainer {
-  width: 30%; /* Responsive width */
-  aspect-ratio: 4 / 3; /* Aspect ratio of 1:1 (a square) */
+  width: 30%;
+  aspect-ratio: 4 / 3;
 
   border-color: black;
   border-style: solid;
@@ -16,7 +16,7 @@
 }
 
 .countdown {
-  font-size: 75px; /* Example styling for social media items */
+  font-size: 75px;
   font-family: "Arial", sans-serif;
 }
 
