--- a/site/src/pages/Success.module.css
+++ b/site/src/pages/Success.module.css
@@ -16,7 +16,7 @@
   height: 9%;
   width: 100%;
   font-family: "Arial", sans-serif;
-  font-size: 35px; /* Example styling for social media items */
+  font-size: 35px;
   color: black;
 }
 .backBtn:hover {
@@ -34,7 +34,7 @@
 
 .title {
   font-family: "Arial", sans-serif;
-  font-size: 35px; /* Example styling for social media items */
+  font-size: 35px;
   text-decoration: none;
   color: #000000;
   text-decoration: underline;
